fixing scrollbar and improving chart logic

--- a/src/Scrollbar.scss
+++ b/src/Scrollbar.scss
@@ -1,5 +1,6 @@
 /* width */
 ::-webkit-scrollbar {
+    height: 5px;
     width: 5px;
 }
 
